--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
 .read-the-docs {
   color: #888;
 }
+.App{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #333;
+  background-color: #f0f0f0;
+  border-radius: 15px;
+}
